<resources>
    <string name="app_name">Akram</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_sign_up_with">or Sign up with</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n">notification Fragement</string>
    <string name="s">Setting Fragement</string>
</resources>