<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img2"/>

    <EditText
        android:id="@+id/login_email"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#999"
        android:textColor="#595c5c"
        android:background="#30ffffff"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:autofillHints="email"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_person_outline_24"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_marginTop="10dp"
        android:textColor="#595c5c"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="#30ffffff"
        android:textColorHint="#999"
        android:padding="20dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/baseline_key_24"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_marginTop="16dp"
        android:backgroundTint="#03b7da"
        android:text="@string/login"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:padding="12dp"

        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="#333"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"

        android:text="Don't have an account? Sign up"
        android:textColor="#333"/>


    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/or_sign_up_with"
        android:layout_above="@id/socialmedia"
        android:textColor="#333"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/socialmedia"
        android:layout_alignParentBottom="true"

        >
        <ImageView
            android:id="@+id/fb_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/f"

            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/apple"

            />
        <ImageView
            android:id="@+id/google"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/g"
            android:layout_margin="20dp"
            />
    </LinearLayout>


</RelativeLayout>
